Added user authentication.

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -12,6 +12,13 @@
 	<header>
 		<h1>
 			<a href="{% url 'shop:index' %}" class="main-link">COMPUTER SHOP</a>
+			{% if user.is_authenticated %}
+        		- <small><small>Добро пожаловать, <a href="">{{ user.username }}</a></small></small>
+        		- <small><small><a href="{% url 'accounts:logout' %}">выйти</a></small></small>
+      		{% else %}
+        		- <small><small><a href="{% url 'accounts:register' %}">Зарегестрироваться</a></small></small>
+        		- <small><small><a href="{% url 'accounts:login' %}">Войти</a></small></small>
+      		{% endif %}
 		</h1>
 	</header>
 
